// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Renders the UI snapshot correctly 1`] = `
<img
  alt=""
  className="css-0"
  src="test.png"
/>
`;

exports[`Image Renders the UI snapshot correctly 2`] = `
<figure
  className="css-0"
>
  <img
    alt=""
    className="css-0"
    src="test.png"
  />
  <figcaption
    className="css-0"
  >
    <div
      className="css-0"
    >
      Caption
    </div>
  </figcaption>
</figure>
`;

exports[`Image Renders the UI snapshot correctly 3`] = `
<img
  alt=""
  className="css-0"
  src="test.png"
/>
`;

exports[`Image Renders the UI snapshot correctly 4`] = `
<img
  alt=""
  className="css-0"
  src="test.png"
/>
`;

exports[`Image Renders the UI snapshot correctly 5`] = `
<img
  alt=""
  className="css-0"
  src="test.png"
/>
`;

exports[`Image Renders the UI snapshot correctly 6`] = `
<img
  alt=""
  className="css-0"
  src="test.png"
/>
`;

exports[`Image Renders the UI snapshot correctly 7`] = `
<img
  alt=""
  className="css-0"
  src="test.png"
/>
`;

exports[`Image Renders the UI snapshot correctly 8`] = `
<div
  className="the-wrap  css-0"
>
  <div
    className="the-crop css-0"
  >
    <img
      alt=""
      className="css-0"
      src="test.png"
    />
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 9`] = `
<div
  className="the-wrap  css-0"
>
  <div
    className="the-crop css-0"
  >
    <img
      alt=""
      className="css-0"
      src="test.png"
    />
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 10`] = `
<img
  alt=""
  className="css-0"
  src="test.png"
/>
`;

exports[`Image Renders the UI snapshot correctly 11`] = `
<div
  className="the-wrap  css-0"
>
  <div
    className="the-crop css-0"
  >
    <img
      alt=""
      className="css-0"
      src="test.png"
    />
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 12`] = `
<div
  className="the-wrap  css-0"
>
  <div
    className="the-crop css-0"
  >
    <img
      alt=""
      className="css-0"
      src="test.png"
    />
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 13`] = `
<div
  className="the-wrap  css-0"
>
  <div
    className="the-crop css-0"
  >
    <img
      alt=""
      className="css-0"
      src="test.png"
    />
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 14`] = `
<div
  className="the-wrap  css-0"
>
  <div
    className="the-crop css-0"
  >
    <img
      alt=""
      className="css-0"
      src="test.png"
    />
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 15`] = `
<div
  className="the-wrap  css-0"
>
  <div
    className="the-crop css-0"
  >
    <img
      alt=""
      className="css-0"
      src="test.png"
    />
  </div>
</div>
`;

exports[`Image Renders the UI snapshot correctly 16`] = `
<div
  className="the-wrap  css-0"
>
  <div
    className="the-crop css-0"
  >
    <img
      alt=""
      className="css-0"
      src="test.png"
    />
  </div>
</div>
`;
